panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__enum__test_error_type_error_with_enumerator.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/enum/test_error_type_error_with_enumerator.c
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: invalid operands to binary operator `<`
   ╭─[panko/tests/cases/enum/test_error_type_error_with_enumerator.c:4:13]
   │
 1 │ enum E { A, B, C };
   │          ┬  
   │          ╰── this is of type `int`
   │ 
 4 │     nullptr < A;
   │     ───┬─── ─  
   │        │       
   │        ╰─────── this is of type `nullptr_t`
───╯
